# esfwx-gui-wx

./: CMakeLists.txt  build_docs.bat  esgui.config.cmake  version.h.in
eschart/: CMakeLists.txt  EsChEvtDefs.h  EsChMain.cpp  EsChPlot.cpp  EsChPlot.h  EsChPlotAxis.cpp  EsChPlotAxis.h  EsChPlotDecorations.cpp  EsChPlotDecorations.h  EsChPlotFillParameters.cpp  EsChPlotFillParameters.h  EsChPlotGeometry.cpp  EsChPlotGeometry.h  EsChPlotLineParameters.cpp  EsChPlotLineParameters.h  EsChPlotObject.cpp  EsChPlotObject.h  EsChPlotPalette.cpp  EsChPlotPalette.h  EsChPlotPanel.cpp  EsChPlotPanel.h  EsChPlotPointParameters.cpp  EsChPlotPointParameters.h  EsChPlotSeries.cpp  EsChPlotSeries.h  EsChPlotSeriesRenderer.cpp  EsChPlotSeriesRenderer.h  EsChPlotStreamAdapter.cpp  EsChPlotStreamAdapter.h  EsChPlotTextParameters.cpp  EsChPlotTextParameters.h  EsChPlotView.cpp  EsChPlotView.h  EsChSpecView.cpp  EsChSpecView.h  EsChartConfig.h.in  eschart.defs.cmake  eschart.h  eschart_pch.h  plplot.patch
eschart/res/: spec-autoscale.xpm  spec-clear.xpm  spec-wnd-add.xpm  spec-wnd-del.xpm  spec-wnd-rename.xpm  spec-zoom-in.xpm  spec-zoom-out.xpm
escomm-gui/: CMakeLists.txt  EsChannelIoBluetoothClientConfigPane.cpp  EsChannelIoBluetoothClientConfigPane.h  EsChannelIoBluetoothLeConfigPane.cpp  EsChannelIoBluetoothLeConfigPane.h  EsChannelIoConfigPane.cpp  EsChannelIoConfigPane.h  EsChannelIoConfigPaneFactory.cpp  EsChannelIoEkonnectConfigPane.cpp  EsChannelIoEkonnectConfigPane.h  EsChannelIoSocketClientConfigPane.cpp  EsChannelIoSocketClientConfigPane.h  EsChannelIoSocketServerConfigPane.cpp  EsChannelIoSocketServerConfigPane.h  EsChannelIoStubConfigPane.cpp  EsChannelIoStubConfigPane.h  EsChannelIoUartConfigPane.cpp  EsChannelIoUartConfigPane.h  EsCommConfigDlg.cpp  EsCommConfigDlg.h  EsCommConfigPane.cpp  EsCommConfigPane.h  EsIoConfigPaneFactory.cpp  EsIoConfigPaneFactory.h  EsProtocolConfigPane.cpp  EsProtocolEcoeConfigPane.cpp  EsProtocolEcoeConfigPane.h  build.h.in  escomm-gui.cpp  escomm-gui.h  escomm_gui.cpp  escommgui.defs.cmake  i18n_xtract.bat
escomm-gui/locale/: escomm-gui.pot  escomm-gui.ru_RU.po
escomm-gui/res/: rescan.xpm
escore-gui/: CMakeLists.txt  Doxyfile.in  EsAppLog.cpp  EsAppLog.h  EsAutoUpdater.cpp  EsCoreGui.cpp  EsCoreGui.h  EsCoreGuiConfig.h.in  EsCoreGuiDefs.h  EsCoreGuiUtilities.cpp  EsCoreGuiUtilities.h  EsDataViewStyle.cpp  EsDataViewStyle.h  EsDlgBase.cpp  EsDlgBase.h  EsDlgUserPrompt.cpp  EsDlgUserPrompt.h  EsListViewBase.cpp  EsListViewBase.h  EsListViewModelArray.cpp  EsListViewModelArray.h  EsListViewModelBase.cpp  EsListViewModelBase.h  EsMultilineTextRenderer.cpp  EsMultilineTextRenderer.h  EsProgressMonitorView.cpp  EsProgressMonitorView.h  EsReflectedClassConfigPane.cpp  EsReflectedClassConfigPane.h  EsReflectionGuiLinks.cpp  EsReflectionGuiLinks.h  EsWxWindowPtr.cpp  EsWxWindowPtr.h  escore-gui.h  escore_gui.cpp  escoregui.defs.cmake  i18n_xtract.bat
escore-gui/locale/: escore-gui.GUI.pot  escore-gui.SRC.pot  escore-gui.pot  escore-gui.ru_RU.po
escore-gui/res/: menu-check-unchecked.xpm  menu-radio-unchecked.xpm
esfwx-gui-wx/tag-1.24/: CMakeLists.txt  esgui.config.cmake  i18n_xtract.bat
esfwx-gui-wx/tag-1.24/escomm-gui/: CMakeLists.txt  EsChannelIoConfigPane.cpp  EsChannelIoConfigPaneFactory.cpp  EsChannelIoConfigPaneFactory.h  EsChannelIoEkonnectConfigPane.cpp  EsChannelIoEkonnectConfigPane.h  EsChannelIoSocketClientConfigPane.cpp  EsChannelIoSocketClientConfigPane.h  EsChannelIoSocketServerConfigPane.cpp  EsChannelIoSocketServerConfigPane.h  EsChannelIoStubConfigPane.cpp  EsChannelIoStubConfigPane.h  EsChannelIoUartConfigPane.cpp  EsChannelIoUartConfigPane.h  EsCommConfigDlg.h  EsCommConfigPane.cpp  EsIoConfigPaneFactory.cpp  EsProtocolConfigPane.cpp  EsProtocolConfigPane.h  EsProtocolEcoeConfigPane.cpp  escomm-gui.h  escomm_gui_pch.h
esfwx-gui-wx/tag-1.24/escomm-gui/res/: version.rc.in
esfwx-gui-wx/tag-1.24/escore-gui/: CMakeLists.txt  EsAutoUpdater.h  EsBusyMessage.cpp  EsBusyMessage.h  EsCoreGuiUtilities.cpp  EsCoreGuiUtilities.h  EsListViewBase.cpp  EsListViewBase.h  EsProgressMonitorView.cpp  EsReflectedClassConfigPane.cpp  EsReflectedClassConfigPane.h  EsReflectionGuiLinks.cpp  EsReflectionGuiLinks.h  escore-gui.h  escore_gui_pch.h  escoregui.defs.cmake
esfwx-gui-wx/tag-1.24/escore-gui/locale/: escore-gui.MAN.pot  escore-gui.SRC.pot  escore-gui.pot
esfwx-gui-wx/tag-1.24/escore-gui/res/: menu-check-checked.xpm  menu-radio-checked.xpm
esmdi-gui/: CMakeLists.txt  Doxyfile.in  EsMdiGuiMain.cpp  EsMdiManagerView.cpp  EsMdiManagerView.h  EsOpenedDocumentList.cpp  EsOpenedDocumentList.h  build.h.in  esmdi-gui.h  esmdi-guipch.h  esmdigui.config.cmake  i18n_xtract.bat
esmdi-gui/locale/: esmdi-gui.pot  esmdi-gui.ru_RU.po
esmdi-gui/res/: version.rc.in
static-linkage/: CMakeLists.txt
